--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Pahe Title</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8">
+    <title>WebVR Example</title>
+  </head>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
-<script src="app.js"></script>
-</body>
+  <!-- This loads the google sdk -->
+  <script src="//storage.googleapis.com/vrview/2.0/build/vrview.min.js"></script>
+  <body>
+    Hello World!!
+
+
+    <div id="vr-homepage"></div>
+    <!-- This loads your local javascript file -->
+    <script src="theLareCommonCode.js"></script>
+    <script src="webVRDayTwo.js"></script>
+  </body>
 </html>
