--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     Hello World!!
 
 
-    <div id="vr-homepage"></div>
+    <div id="meiayeshadocs"></div>
     <!-- This loads your local javascript file -->
     <script src="theLareCommonCode.js"></script>
     <script src="webVRDayTwo.js"></script>
